# find_the_color

./: .ycm_extra_conf.py  CMakeLists.txt  README.md
include/: SocketMatTransmissionServer.h  detection.h
src/: CMakeLists.txt  SocketMatTransmissionServer.cpp  client.cpp  detection.cpp  fish_server.cpp  server.cpp  upper_computer.cpp
